--- a/views/login.jade
+++ b/views/login.jade
@@ -7,5 +7,5 @@ block body
 			a(href='#',class='navbar-brand') Home Expenses App
 		.jumbotron
 			h1 Home Expenses App
-			form(action='auth/google/redirect', method='get', data-ajax="false")
+			form(action='redirect', method='get', data-ajax="false")
 				button(type='submit', class='btn btn-large btn-primary') Login
